--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 
 <title>Coria & Asociados | Abogados en Derecho Familiar</title>
-<link rel="icon" type="image/png" href="Logo.png">
+<link rel="icon" type="image/png" href="Logo.webp">
 
 <meta name="description" content="Coria & Asociados. Más de 25 años de experiencia en derecho familiar. Divorcios, pensión alimenticia, custodia y asesoría legal.">
 <meta name="keywords" content="abogado familiar, divorcios, pensión alimenticia, custodia legal, abogado litigante">
@@ -14,8 +14,9 @@
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Bootstrap Icons -->
+<!-- Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -65,25 +66,32 @@
   </div>
 </header>
 
-<!-- DESPACHO -->
-<section class="section section-light">
+<!-- SOBRE NOSOTROS -->
+<section class="section section-light" id="sobre-nosotros">
   <div class="container">
     <div class="row align-items-center g-5">
       <div class="col-md-6 fade-in">
-        <h2>Experiencia que genera confianza</h2>
+        <h2>Sobre nosotros</h2>
         <p>
-          En Coria & Asociados entendemos que los asuntos familiares
-          requieren conocimiento jurídico, sensibilidad y una estrategia
-          sólida. Más de 25 años respaldan nuestro trabajo.
+          En <strong>Coria & Asociados</strong> contamos con más de
+          <strong>25 años de experiencia</strong> brindando asesoría y
+          representación en derecho familiar, actuando con ética,
+          confidencialidad y un profundo compromiso con cada caso.
+        </p>
+        <p>
+          Ofrecemos nuestros servicios legales en
+          <strong>Atoyac de Álvarez, San Jerónimo de Juárez y Tecpan de Galeana</strong>,
+          atendiendo de manera cercana y personalizada a cada cliente.
         </p>
       </div>
+
       <div class="col-md-6 fade-in delay">
         <div class="legal-box">
           <ul>
+            <li>✔ Más de 25 años de trayectoria profesional</li>
             <li>✔ Atención directa y personalizada</li>
             <li>✔ Estrategia legal clara y transparente</li>
             <li>✔ Representación ante juzgados familiares</li>
-            <li>✔ Protección patrimonial y familiar</li>
           </ul>
         </div>
       </div>
@@ -97,59 +105,51 @@
     <h2 class="text-center mb-5">Áreas de práctica</h2>
 
     <div class="row g-4">
-      <!-- Divorcios -->
+      <!-- I. Divorcios -->
       <div class="col-md-4">
         <article class="service-card">
-          <h3>Divorcios</h3>
+          <h3>I. Divorcios</h3>
           <p>Divorcio incausado, voluntario y contencioso. Elaboración de convenios y liquidación de sociedad conyugal.</p>
         </article>
       </div>
 
-      <!-- Custodia y patria potestad -->
+      <!-- II. Custodia y patria potestad -->
       <div class="col-md-4">
         <article class="service-card">
-          <h3>Custodia y patria potestad</h3>
+          <h3>II. Custodia y patria potestad</h3>
           <p>Guarda y custodia, régimen de visitas, modificación de custodia y defensa del interés superior del menor.</p>
         </article>
       </div>
 
-      <!-- Pensión alimenticia -->
+      <!-- III. Pensión alimenticia -->
       <div class="col-md-4">
         <article class="service-card">
-          <h3>Pensión alimenticia</h3>
+          <h3>III. Pensión alimenticia</h3>
           <p>Solicitud, incremento o reducción, incumplimiento, retención de salario y ejecución de sentencias.</p>
         </article>
       </div>
 
-      <!-- Conflictos familiares -->
+      <!-- IV. Conflictos familiares -->
       <div class="col-md-4">
         <article class="service-card">
-          <h3>Conflictos familiares</h3>
+          <h3>IV. Conflictos familiares</h3>
           <p>Violencia familiar, alienación parental, conflictos entre padres no casados e incumplimiento de resoluciones.</p>
         </article>
       </div>
 
-      <!-- Medidas de protección -->
+      <!-- V. Medidas de protección -->
       <div class="col-md-4">
         <article class="service-card">
-          <h3>Medidas de protección</h3>
+          <h3>V. Medidas de protección</h3>
           <p>Solicitud de medidas urgentes para la protección de menores y víctimas de violencia familiar.</p>
         </article>
       </div>
 
-      <!-- Convenios y asesoría -->
+      <!-- VI. Convenios y asesoría legal -->
       <div class="col-md-4">
         <article class="service-card">
-          <h3>Convenios y asesoría legal</h3>
+          <h3>VI. Convenios y asesoría legal</h3>
           <p>Elaboración de convenios familiares, asesoría preventiva, mediación y regularización de acuerdos verbales.</p>
-        </article>
-      </div>
-
-      <!-- Representación legal -->
-      <div class="col-md-4">
-        <article class="service-card">
-          <h3>Representación legal</h3>
-          <p>Representación en juicios familiares con estrategias legales personalizadas y acompañamiento integral.</p>
         </article>
       </div>
     </div>
@@ -159,19 +159,66 @@
 <!-- CONTACTO -->
 <section class="section section-light" id="contacto">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <h2 class="text-center mb-4">Solicita asesoría legal</h2>
+
+    <h2 class="text-center mb-5">Solicita asesoría legal</h2>
+
+    <div class="row align-items-start g-5">
+
+      <!-- COLUMNA IZQUIERDA: DATOS -->
+      <div class="col-md-5 fade-in">
+
+        <h3 class="mb-4">Lic. Jaime Coria</h3>
+
+        <p class="mb-3">
+          <a class="whatsapp-link" href="https://wa.me/527421006758?text=%C2%A1Hola%20*Coria%20%26%20Asociados*!%20Me%20interesa%20contratar%20sus%20servicios." target="_blank">
+            <i class="fa-brands fa-whatsapp"></i> <strong>WhatsApp:</strong> 222 110 6016.</a>
+        </p>
+
+        <p class="mb-3">
+          <i class="bi bi-clock"></i>
+          <strong>Horario de atención:</strong><br>
+          Lunes a Viernes: 9:00 AM – 5:00 PM.
+        </p>
+
+        <p>
+          <i class="bi bi-geo-alt"></i>
+          <strong>Ubicaciones:</strong><br>
+          Atoyac de Álvarez, Guerrero.<br>
+          San Jerónimo de Juárez, Guerrero.<br>
+          Tecpan de Galeana, Guerrero.
+        </p>
+
+      </div>
+
+      <!-- COLUMNA DERECHA: FORMULARIO -->
+      <div class="col-md-7 fade-in delay">
 
         <form onsubmit="enviarWhatsApp(event)" class="legal-form">
+
           <input type="text" id="nombre" class="form-control mb-3" placeholder="Nombre completo" required>
-          <input type="text" id="caso" class="form-control mb-3" placeholder="Tipo de caso" required>
-          <textarea id="mensaje" class="form-control mb-4" rows="5" placeholder="Describe brevemente tu situación" required></textarea>
+
+          <input type="email" id="correo" class="form-control mb-3" placeholder="Correo electrónico (opcional)">
+
+          <select id="caso" class="form-control mb-3" required>
+            <option value="">Seleccione el tipo de caso</option>
+            <option value="Divorcio">Divorcio</option>
+            <option value="Custodia y patria potestad">Custodia y patria potestad</option>
+            <option value="Pensión alimenticia">Pensión alimenticia</option>
+            <option value="Conflictos familiares">Conflictos familiares</option>
+            <option value="Medidas de protección">Medidas de protección</option>
+            <option value="Convenios familiares">Convenios familiares</option>
+            <option value="Otro asunto familiar">Otro asunto familiar</option>
+          </select>
+
+          <textarea id="mensaje" class="form-control mb-4" rows="5" placeholder="Describe brevemente tu situación"
+            required></textarea>
 
           <button type="submit" class="btn btn-gold-lg w-100">
             <i class="bi bi-whatsapp"></i> Solicitar asesoría
           </button>
+
         </form>
+
       </div>
     </div>
   </div>
@@ -180,23 +227,98 @@
 <!-- FOOTER -->
 <footer class="footer">
   <div class="container">
-    <p>© 2026 Coria & Asociados. Todos los derechos reservados.</p>
+    <div class="row justify-content-center align-items-start g-4">
+
+      <!-- LOGO -->
+      <div class="col-md-2 text-center">
+        <img src="Logo.webp" alt="Coria & Asociados" class="footer-logo">
+      </div>
+
+      <!-- INFO -->
+<div class="col-md-4">
+  <p class="footer-info-title">Coria & Asociados</p>
+  <p class="footer-info-text">
+    Especialistas en Derecho Familiar.<br>
+    Atención profesional en divorcios, pensión alimenticia,
+    custodia y conflictos familiares.<br>
+    <i class="bi bi-geo-alt"></i> Guerrero, México.
+  </p>
+</div>
+
+      <!-- ÍNDICE -->
+      <div class="col-md-2">
+        <h6 class="footer-title">Menú</h6>
+        <ul class="footer-menu">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <!-- DERECHOS -->
+    <p class="footer-copy text-center mt-4">
+      © 2026 Coria & Asociados. Sitio desarrollado por
+      <a href="https://icpages.github.io/ICSmartServices/pages.html"
+         target="_blank" class="footer-dev">IC Pages</a>.</p>
   </div>
 </footer>
+
+<!-- BURBUJA WHATSAPP -->
+<a href="https://wa.me/527421006758?text=%C2%A1Hola%20*Coria%20%26%20Asociados*!%20Me%20gustaría%20recibir%20asesoría%20legal."
+   class="whatsapp-float"
+   target="_blank"
+   aria-label="WhatsApp">
+  <i class="fa-brands fa-whatsapp"></i>
+</a>
 
 <script>
 function enviarWhatsApp(e){
   e.preventDefault();
-  const nombre = document.getElementById('nombre').value;
-  const caso = document.getElementById('caso').value;
+
+  const nombre  = document.getElementById('nombre').value;
+  const correo = document.getElementById('correo').value;
+  const caso    = document.getElementById('caso').value;
   const mensaje = document.getElementById('mensaje').value;
 
-  const texto = `Hola, mi nombre es ${nombre}.%0ACaso: ${caso}.%0AMensaje: ${mensaje}`;
-  window.open(`https://wa.me/527421006758?text=${texto}`, '_blank');
+  let texto = `Hola, mi nombre es ${nombre}.%0A`;
+  if(correo){
+    texto += `Correo: ${correo}.%0A`;
+  }
+  texto += `Tipo de caso: ${caso}.%0A`;
+  texto += `Mensaje: ${mensaje}.`;
+
+  window.open(
+    `https://wa.me/527421006758?text=${texto}`,
+    '_blank'
+  );
 }
+</script>
+
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const elements = document.querySelectorAll(".fade-in");
+
+  const observer = new IntersectionObserver(
+    entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("show");
+          observer.unobserve(entry.target);
+        }
+      });
+    },
+    {
+      threshold: 0.15
+    }
+  );
+
+  elements.forEach(el => observer.observe(el));
+});
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
