--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 <title>Coria & Asociados | Abogados en Derecho Familiar</title>
 <link rel="icon" type="image/png" href="Logo.webp">
 
-<meta name="description" content="Coria & Asociados. Más de 25 años de experiencia en derecho familiar. Divorcios, pensión alimenticia, custodia y asesoría legal.">
-<meta name="keywords" content="abogado familiar, divorcios, pensión alimenticia, custodia legal, abogado litigante">
-<meta name="author" content="Coria & Asociados">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Bootstrap -->
@@ -21,6 +18,7 @@
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
+<script src="seo.js"></script>
 <link rel="stylesheet" href="estilos.css">
 </head>
 
@@ -171,7 +169,7 @@
 
         <p class="mb-3">
           <a class="whatsapp-link" href="https://wa.me/527421006758?text=%C2%A1Hola%20*Coria%20%26%20Asociados*!%20Me%20interesa%20contratar%20sus%20servicios." target="_blank">
-            <i class="fa-brands fa-whatsapp"></i> <strong>WhatsApp:</strong> 222 110 6016.</a>
+            <i class="fa-brands fa-whatsapp"></i> <strong>WhatsApp:</strong> 742 100 6758.</a>
         </p>
 
         <p class="mb-3">
