--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
 
 <script src="seo.js"></script>
 <link rel="stylesheet" href="estilos.css">
+
+<style>
+  :root{
+    --header-img: url('Imagen.webp');
+  }
+</style>
+
 </head>
 
 <body>
 
 <!-- HEADER -->
 <header class="header">
+
   <div class="container">
     <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#">Coria & Asociados</a>
@@ -103,56 +111,89 @@
     <h2 class="text-center mb-5">Áreas de práctica</h2>
 
     <div class="row g-4">
+
       <!-- I. Divorcios -->
       <div class="col-md-4">
-        <article class="service-card">
-          <h3>I. Divorcios</h3>
-          <p>Divorcio incausado, voluntario y contencioso. Elaboración de convenios y liquidación de sociedad conyugal.</p>
-        </article>
+        <a href="divorcios.html" class="text-decoration-none text-reset">
+          <article class="service-card">
+            <h3>I. Divorcios</h3>
+            <p>
+              Divorcio incausado, voluntario y contencioso.
+              Elaboración de convenios y liquidación de sociedad conyugal.
+            </p>
+          </article>
+        </a>
       </div>
 
       <!-- II. Custodia y patria potestad -->
       <div class="col-md-4">
-        <article class="service-card">
-          <h3>II. Custodia y patria potestad</h3>
-          <p>Guarda y custodia, régimen de visitas, modificación de custodia y defensa del interés superior del menor.</p>
-        </article>
+        <a href="custodias.html" class="text-decoration-none text-reset">
+          <article class="service-card">
+            <h3>II. Custodia y patria potestad</h3>
+            <p>
+              Guarda y custodia, régimen de visitas, modificación de custodia
+              y defensa del interés superior del menor.
+            </p>
+          </article>
+        </a>
       </div>
 
       <!-- III. Pensión alimenticia -->
       <div class="col-md-4">
-        <article class="service-card">
-          <h3>III. Pensión alimenticia</h3>
-          <p>Solicitud, incremento o reducción, incumplimiento, retención de salario y ejecución de sentencias.</p>
-        </article>
+        <a href="pensiones.html" class="text-decoration-none text-reset">
+          <article class="service-card">
+            <h3>III. Pensión alimenticia</h3>
+            <p>
+              Solicitud, incremento o reducción, incumplimiento,
+              retención de salario y ejecución de sentencias.
+            </p>
+          </article>
+        </a>
       </div>
 
       <!-- IV. Conflictos familiares -->
       <div class="col-md-4">
-        <article class="service-card">
-          <h3>IV. Conflictos familiares</h3>
-          <p>Violencia familiar, alienación parental, conflictos entre padres no casados e incumplimiento de resoluciones.</p>
-        </article>
+        <a href="conflictosfamiliares.html" class="text-decoration-none text-reset">
+          <article class="service-card">
+            <h3>IV. Conflictos familiares</h3>
+            <p>
+              Violencia familiar, alienación parental, conflictos entre
+              padres no casados e incumplimiento de resoluciones.
+            </p>
+          </article>
+        </a>
       </div>
 
       <!-- V. Medidas de protección -->
       <div class="col-md-4">
-        <article class="service-card">
-          <h3>V. Medidas de protección</h3>
-          <p>Solicitud de medidas urgentes para la protección de menores y víctimas de violencia familiar.</p>
-        </article>
+        <a href="medidas.html" class="text-decoration-none text-reset">
+          <article class="service-card">
+            <h3>V. Medidas de protección</h3>
+            <p>
+              Solicitud de medidas urgentes para la protección de menores
+              y víctimas de violencia familiar.
+            </p>
+          </article>
+        </a>
       </div>
 
       <!-- VI. Convenios y asesoría legal -->
       <div class="col-md-4">
-        <article class="service-card">
-          <h3>VI. Convenios y asesoría legal</h3>
-          <p>Elaboración de convenios familiares, asesoría preventiva, mediación y regularización de acuerdos verbales.</p>
-        </article>
+        <a href="convenios.html" class="text-decoration-none text-reset">
+          <article class="service-card">
+            <h3>VI. Convenios y asesoría legal</h3>
+            <p>
+              Elaboración de convenios familiares, asesoría preventiva,
+              mediación y regularización de acuerdos verbales.
+            </p>
+          </article>
+        </a>
       </div>
+
     </div>
   </div>
 </section>
+
 
 <!-- CONTACTO -->
 <section class="section section-light" id="contacto">
